# ib-matcher

./: .gitattributes  .gitignore  Cargo.toml  README.md  ib-matcher.sln
ib-bridge/: README.md
ib-bridge/csharp/IbBridge/: IbBridge.csproj  IbBridgeConfig.cs  IbMatcher.cs  IbMatcherConfig.cs  Match.cs  NativeMethods.cs  PinyinNotation.cs
ib-bridge/rust/: Cargo.toml  build.rs  cbindgen.toml
ib-bridge/rust/include/: ib_bridge.h  ib_bridge.h.1
ib-bridge/rust/src/: lib.rs
ib-matcher/: Cargo.toml  README.md
ib-matcher/benches/: ascii.rs
ib-matcher/benches/regex/: ascii.rs  cp.rs  lita.rs
ib-matcher/examples/: basic.rs
ib-matcher/src/: lib.rs
ib-matcher/src/matcher/: analyze.rs  ascii.rs  config.rs  encoding.rs  input.rs  matches.rs  mod.rs  pinyin.rs  romaji.rs
ib-matcher/src/pinyin/: mod.rs
ib-matcher/src/regex/: mod.rs
ib-matcher/src/regex/cp/: mod.rs  regex.rs
ib-matcher/src/regex/lita/: mod.rs  regex.rs
ib-matcher/src/regex/nfa/: backtrack.rs  mod.rs
ib-matcher/src/regex/util/: empty.rs  mod.rs  prefilter.rs  syntax.rs
ib-matcher/src/syntax/: ev.rs  mod.rs
ib-matcher/src/syntax/glob/: mod.rs  util.rs
ib-matcher/src/syntax/regex/: mod.rs
ib-matcher/src/syntax/regex/hir/: case.rs  fold.rs  literal.rs  mod.rs
ib-pinyin/: Cargo.toml  README.md
ib-pinyin/bindings/ahk2/: README.md
ib-pinyin/bindings/c/: README.md
ib-pinyin/src/: lib.rs
ib-romaji/: Cargo.toml  README.md
ib-romaji/benches/: kana.rs
ib-romaji/data/: dict.ps1  kana.py
ib-romaji/src/: cache.rs  input.rs  kana.rs  kanji.rs  lib.rs
ib-romaji/src/convert/: hepburn_ime.rs  mod.rs
ib-romaji/src/data/: kana.rs  kanjis.rs  word_kanas.rs  words.in.txt
ib-unicode/: Cargo.toml  README.md
ib-unicode/benches/: ascii.rs  case.rs
ib-unicode/src/: ascii.rs  lib.rs
ib-unicode/src/case/: map.rs  mod.rs
ib-unicode/src/case/fold/: map.in.rs  map.rs  mod.rs  unicase.rs
