[package]
name = "ib-unicode"
version = "0.2.1"
edition = "2021"
description = "Unicode utils"
keywords = ["unicode", "case", "ascii"]
repository = "https://github.com/Chaoses-Ib/ib-matcher/tree/master/ib-unicode"
authors.workspace = true
license.workspace = true

[features]
default = ["case-fold"]

## Case folding support. See [`case`](case#case-folding) for details.
case-fold = []

## Enables all performance related features. This feature is intended to cover all reasonable features that improve performance, even if more are added in the future.
perf = ["perf-ascii", "perf-case-fold", "perf-case-map"]
## ASCII-related optimizations.
perf-ascii = ["dep:bstr", "perf-find"]
## [Case folding](case#case-folding) optimizations.
perf-case-fold = []
## [Mono lowercase](case#mono-lowercase) map. -37% match time, +38 KiB.
perf-case-map = []
## `find_*()` optimizations.
perf-find = ["dep:memchr"]
## Expose all underlying algorithms for benchmarking. No version compatibility guarantee.
bench = ["perf-case-fold"]

_test_data = []
doc = ["dep:document-features"]

[dependencies]
bstr = { version = "1", default-features = false, optional = true }
document-features = { version = "0.2.11", optional = true }
memchr = { version = "2", optional = true }

[dev-dependencies]
criterion = "0.7"
ib-unicode = { features = ["perf", "bench"], path = "." }

[[bench]]
name = "ascii"
harness = false

[[bench]]
name = "case"
harness = false

[package.metadata.docs.rs]
# We want to document all features.
all-features = true
# Since this crate's feature setup is pretty complicated, it is worth opting
# into a nightly unstable option to show the features that need to be enabled
# for public API items. To do that, we set 'docsrs', and when that's enabled,
# we enable the 'doc_auto_cfg' feature.
#
# To test this locally, run:
# ```
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
# $env:RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc --all-features
# ```
rustdoc-args = ["--cfg", "docsrs"]
